Added top-events endpoint
