# analytics-api/src/main/java/com/example/eventstream/controller/AnalyticsController.java
@@ -1,12 +1,16 @@
 package com.example.eventstream.controller;
 
+import java.util.List;
+
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import com.example.eventstream.model.EventCount;
 import com.example.eventstream.model.EventCounts;
 import com.example.eventstream.service.interfaces.AnalyticsService;
+
 
 
 
@@ -29,5 +33,11 @@ public class AnalyticsController {
   public EventCounts getCountByUserId(@PathVariable String userId) {
       return this.analyticsService.retrieveCurrEventCounts(userId);
   }
+
+  @GetMapping("/top-events")
+  public List<EventCount> getTop5Events() {
+    return this.analyticsService.getTop5Events();
+  }
+  
   
 }
